changed 'New Integer(int)' to 'Integer.valueOf' in EdgeTable